--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "prettier-plugin-tailwindcss": "^0.5.11",
     "turbo": "^2.3.1"
   },
-  "packageManager": "pnpm@8.15.6",
   "engines": {
     "node": ">=18"
   },
-  "name": "with-tailwind"
+  "name": "with-tailwind",
+  "packageManager": "npm@9.6.7",
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
