--- a/apps/primitives/package.json
+++ b/apps/primitives/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@meloroids-llc/primitives",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "framer-motion": "^11.11.17",
     "next": "^14.2.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.3",
