--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/ui",
+  "name": "@meloroids-llc/ui",
   "version": "0.0.0",
   "sideEffects": [
     "**/*.css"
@@ -8,6 +8,7 @@
     "dist"
   ],
   "exports": {
+    "./Button": "./src/Button.tsx",
     "./styles.css": "./dist/index.css",
     "./card": "./src/card.tsx"
   },
