--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -10,8 +10,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@repo/common": "*",
     "@repo/ui": "*",
+    "@repo/chord-progressions": "*",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
