add all songs from wun of wun to data

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -20,7 +20,8 @@
     "./styles.css": "./src/styles.css",
     "./Card": "./src/Card.tsx",
     "./Modal": "./src/Modal.tsx",
-    "./useModal": "./src/hooks/useModal.ts"
+    "./useModal": "./src/hooks/useModal.ts",
+    "./Colors": "./src/constants/colors.constants.ts"
   },
   "license": "MIT",
   "scripts": {
