--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["gunna", "meloroids", "wassam", "Yaya"],
+  "cSpell.words": ["gunna", "meloroids", "treesh", "wassam", "Yaya"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true
 }
