basic chord algorithm working as a package

--- a/packages/chord-progressions/package.json
+++ b/packages/chord-progressions/package.json
@@ -13,6 +13,9 @@
     "./subtract": {
       "types": "./src/subtract.ts",
       "default": "./dist/subtract.js"
+    },
+    "./generate-progressions": {
+      "default": "./dist/generateChords.js"
     }
   },
   "devDependencies": {
