make links package

--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@repo/links": "*",
     "@repo/chord-progressions": "*",
     "@repo/ui": "*",
     "framer-motion": "^11.12.0",
