--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -11,8 +11,9 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
-    "@repo/links": "*",
+    "@next/third-parties": "^15.0.4",
     "@repo/chord-progressions": "*",
+    "@repo/links": "*",
     "@repo/ui": "*",
     "framer-motion": "^11.12.0",
     "next": "^14.2.3",
