--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@next/third-parties": "^15.0.4",
     "@repo/chord-progressions": "*",
-    "@repo/links": "*",
+    "@repo/assets": "*",
     "@repo/ui": "*",
     "framer-motion": "^11.12.0",
     "next": "^14.2.3",
