remove more redundant code from link tree clone

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,8 @@
     "./Card": "./src/Card.tsx",
     "./Modal": "./src/Modal.tsx",
     "./useModal": "./src/hooks/useModal.ts",
-    "./Colors": "./src/constants/colors.constants.ts"
+    "./Colors": "./src/constants/colors.constants.ts",
+    "./animationVariants": "./src/constants/animation.constants.ts"
   },
   "license": "MIT",
   "scripts": {
