--- a/apps/link-tree-clone/package.json
+++ b/apps/link-tree-clone/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@repo/ui": "*",
+    "@repo/assets": "*",
     "@next/third-parties": "^14.2.5",
     "@sendgrid/client": "^8.1.3",
     "@sendgrid/mail": "^8.1.3",
