--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-  "cSpell.words": ["gunna", "meloroids", "treesh", "wassam", "Yaya"],
+  "cSpell.words": [
+    "Firestore",
+    "gunna",
+    "meloroids",
+    "treesh",
+    "wassam",
+    "Yaya"
+  ],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "files.exclude": {
