--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -12,8 +12,9 @@
   },
   "dependencies": {
     "@next/third-parties": "^15.0.4",
-    "@repo/chord-progressions": "*",
     "@repo/assets": "*",
+    "@repo/chord-progressions": "*",
+    "@repo/common": "^1.0.0",
     "@repo/ui": "*",
     "framer-motion": "^11.12.0",
     "next": "^14.2.3",
