--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
+    "dev": "turbo dev --concurrency 11",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
     "clean": "turbo clean",
