--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -15,7 +15,9 @@
     "@repo/assets": "*",
     "@repo/chord-progressions": "*",
     "@repo/common": "^1.0.0",
+    "@repo/firebase": "*",
     "@repo/ui": "*",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.12.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
