create artist working

--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -14,6 +14,10 @@
       "types": "./src/services/firestore.service.ts",
       "default": "./dist/services/firestore.service.js"
     },
+    "./storageService": {
+      "types": "./src/services/storage.service.ts",
+      "default": "./dist/services/storage.service.js"
+    },
     "./authService": {
       "types": "./src/services/auth.service.ts",
       "default": "./dist/services/auth.service.js"
