--- a/apps/gunna-type-beat/package.json
+++ b/apps/gunna-type-beat/package.json
@@ -17,12 +17,14 @@
     "@repo/common": "^1.0.0",
     "@repo/firebase": "*",
     "@repo/ui": "*",
+    "@tanstack/react-query": "^5.65.0",
     "firebase": "^11.1.0",
     "framer-motion": "^11.12.0",
     "next": "^14.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-query": "^3.39.3",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
