--- a/apps/link-tree-clone/package.json
+++ b/apps/link-tree-clone/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@repo/ui": "*",
-    "@repo/assets": "*",
     "@next/third-parties": "^14.2.5",
+    "@repo/assets": "*",
+    "@repo/ui": "*",
     "@sendgrid/client": "^8.1.3",
     "@sendgrid/mail": "^8.1.3",
     "env": "^0.0.2",
@@ -19,6 +19,7 @@
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "zod": "^3.23.8"
   },
   "devDependencies": {
